# JewelryCostCalculator

./: .env.example  Cargo.toml  README.md  SCAN.md  build.rs
src/: app_state.rs  main.rs  materials.rs  report.rs  ring_sizing.rs  scan.rs
src/database/: catalog.rs  files.rs  mod.rs  profiles.rs
src/mesh/: export.rs  mod.rs  obj.rs  stl.rs  volume.rs
src/pricing/: api.rs  mod.rs
src/ui/: center_panel.rs  gpu_mesh.rs  left_panel.rs  mod.rs  right_panel.rs
